--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 
 
                       <li class="nav-item">
-                        <a class="nav-link" href="#contactanos">Contactanos</a>
+                        <a class="nav-link" href="#contactanos">Contáctanos</a>
                       </li>
                    
 
